# ww_crm

./: .gitignore  CLAUDE.MD  CLAUDE.md  PHASE3_IMPROVEMENTS.md  PHASE5_IMPROVEMENTS.md  README.md  TESTING.md  TESTING_IMPROVEMENTS.md  app.py  codemcp.toml  conftest.py  db.py  main.py  models.py  pyproject.toml  requirements.txt  run_format.sh  run_test.sh  run_tests.py  setup.py
tests/: conftest.py  test_models.py  test_routes.py  test_ui.py  test_utils.py
ww_crm/: __init__.py  app.py  db.py  models.py
ww_crm/routes/: __init__.py  customers.py  invoices.py
ww_crm/services/: __init__.py  customer_service.py  invoice_service.py
ww_crm/templates/: base.html  index.html
ww_crm/templates/customers/: create.html  invoices.html  list.html  view.html
ww_crm/templates/invoices/: create.html  list.html  view.html
ww_crm/tests/: conftest.py  conftest_parallel.py  test_imports.py  test_models.py  test_no_explicit_waits.py  test_ui.py  test_utils.py
ww_crm/tests/e2e/: test_ui.py  test_visual.py
ww_crm/tests/e2e/pages/: README.md  __init__.py  base_page.py  customer_create_page.py  customer_list_page.py  home_page.py  invoice_list_page.py  selectors.py
ww_crm/tests/e2e/screenshots/: README.md
ww_crm/tests/fixtures/: __init__.py  db_utils.py  factories.py
ww_crm/tests/integration/: test_data_seeding.py  test_routes.py
ww_crm/tests/unit/: test_models.py
ww_crm/tools/: __init__.py  check_explicit_waits.py
ww_crm/utils/: __init__.py  response.py
