[project]
version = "0.0.1"
requires-python = ">=3.11"
license = {text = "GPL3"}

[tool.pytest.ini_options]
# Pytest configuration
testpaths = ["ww_crm/tests"]
# -n auto allows parallel execution
# -v verbose more detailed output
# -s allows print() statements to be seen
# --tb=native provides better tracebacks
addopts = "-vs --tb=native"
# Group tests by test type for better parallelization
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
]
