[project]
version = "0.0.1"
requires-python = ">=3.11"
license = {text = "GPL3"}

[tool.pytest.ini_options]
# Pytest configuration
testpaths = ["ww_crm/tests"]
# -v verbose more detailed output
# -s allows print() statements to be seen
# --tb=native provides better tracebacks
# --timeout=30 sets a 30-second timeout for each test
addopts = "-vs --tb=native --timeout=15"
# Group tests by test type for better parallelization
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
]
